--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@ About Area
                                 <li> Making your profile job-ready is our responsibility</li>
                             </ul>
                         </div>
-                        <a href="https://explore.hackersvilla.xyz/aboutus" class="th-btn">ABOUT MORE<i class="far fa-arrow-right ms-2"></i></a>
+                        <a href="https://explore.hackersvilla.xyz/aboutus" class="th-btn">KNOW MORE ABOUT US<i class="far fa-arrow-right ms-2"></i></a>
                     </div>
                 </div>
             </div>
@@ -619,12 +619,13 @@ Servce Area
 
             </div>
             <div class="th-carousel" data-fade="true" id="course-tab-content" data-adaptive-height="true">
+                
                 <div>
                     <div class="row gy-4 mb-60">
                         <div class="col-md-6 col-xxl-3 col-lg-4">
                             <div class="course-box">
                                 <div class="course-img">
-                                    <img src="assets/img/product/Advanced.jpg" alt="img">
+                                    <a href="https://explore.hackersvilla.xyz/courses/Advanced-Cybersecurity-Course-by-Sanchay-Singh"><img src="assets/img/product/Advanced.jpg" alt="img"></a>
                                     <span class="tag"><i class="fas fa-clock"></i>120 Days</span>
                                 </div>
                                 <div class="course-content">
@@ -652,7 +653,7 @@ Servce Area
                         <div class="col-md-6 col-xxl-3 col-lg-4">
                             <div class="course-box">
                                 <div class="course-img">
-                                    <img src="assets/img/product/Basic.jpg" alt="img">
+                                    <a href="https://explore.hackersvilla.xyz/courses/Basic-Cybersecurity-Course"><img src="assets/img/product/Basic.jpg" alt="img"></a>
                                     <span class="tag"><i class="fas fa-clock"></i> 45 DAYS</span>
                                 </div>
                                 <div class="course-content">
@@ -685,7 +686,7 @@ Servce Area
                         <div class="col-md-6 col-xxl-3 col-lg-4">
                             <div class="course-box">
                                 <div class="course-img">
-                                    <img src="assets/img/product/personal_guidance.jpg" alt="img">
+                                    <a href="https://explore.hackersvilla.xyz/membership"><img src="assets/img/product/personal_guidance.jpg" alt="img"></a>
                                     <span class="tag"><i class="fas fa-clock"></i>Weekly Meetings</span>
                                 </div>
                                 <div class="course-content">
@@ -718,7 +719,7 @@ Servce Area
                         <div class="col-md-6 col-xxl-3 col-lg-4">
                             <div class="course-box">
                                 <div class="course-img">
-                                    <img src="assets/img/product/physical.jpg" alt="img">
+                                    <a href="https://explore.hackersvilla.xyz/products/658d5b8c37ecce4baffb6695"><img src="assets/img/product/physical.jpg" alt="img"></a>
                                     <span class="tag"><i class="fas fa-clock"></i>90 Days</span>
                                 </div>
                                 <div class="course-content">
@@ -746,7 +747,7 @@ Servce Area
                         <div class="col-md-6 col-xxl-3 col-lg-4">
                             <div class="course-box">
                                 <div class="course-img">
-                                    <img src="assets/img/product/digital.jpg" alt="img">
+                                    <a href="https://explore.hackersvilla.xyz/products/658d5b8c37ecce4baffb6695"><img src="assets/img/product/digital.jpg" alt="img"></a>
                                     <span class="tag"><i class="fas fa-clock"></i> 90 Days</span>
                                 </div>
                                 <div class="course-content">
@@ -779,7 +780,7 @@ Servce Area
                         <div class="col-md-6 col-xxl-3 col-lg-4">
                             <div class="course-box">
                                 <div class="course-img">
-                                    <img src="assets/img/product/Masterclass.jpg" alt="img">
+                                    <a href="https://explore.hackersvilla.xyz/sessions"><img src="assets/img/product/Masterclass.jpg" alt="img"></a>
                                     <span class="tag"><i class="fas fa-clock"></i>05 May, 2024, 7PM</span>
                                 </div>
                                 <div class="course-content">
@@ -824,10 +825,6 @@ Cta Area
 
         <div class="shape-mockup cta4-shape1 jump-reverse d-lg-block d-none" data-right="10%" data-top="12%">
             <img src="assets/img/normal/cta_4_shape1.png" alt="img">
-        </div>
-
-        <div class="shape-mockup cta4-shape2 d-lg-block d-none" data-right="0" data-bottom="0%">
-            <img src="assets/img/normal/cta_4_shape2.png" alt="img">
         </div>
 
         <div class="shape-mockup cta4-shape3 d-md-block d-none" data-right="0" data-top="0%">
@@ -1285,7 +1282,7 @@ Blog Area
                 <div class="col-md-6 col-xl-4">
                     <div class="th-blog blog-single style3">
                         <div class="blog-img">
-                            <a href="https://explore.hackersvilla.xyz/blog/why-cybersecurity-is-so-important-in-2024"><img src="assets/img/blog/blog-1-1.jpg" alt="Blog Image"></a>
+                            <a href="https://explore.hackersvilla.xyz/blog/why-cybersecurity-is-so-important-in-2024"><img src="assets/img/blog/blog1.jpg" alt="Blog Image"></a>
                         </div>
                         <div class="blog-content">
                             <div class="blog-meta">
@@ -1302,16 +1299,17 @@ Blog Area
                 <div class="col-md-6 col-xl-4">
                     <div class="th-blog blog-single style3">
                         <div class="blog-img">
-                            <a href="https://explore.hackersvilla.xyz/blog"><img src="assets/img/blog/blog-1-1.jpg" alt="Blog Image"></a>
+                            <a href="https://explore.hackersvilla.xyz/blog/why-hackersvilla-training-stands-out-from-the-crowd"><img src="assets/img/blog/blog2.jpg" alt="Blog Image"></a>
                         </div>
                         <div class="blog-content">
                             <div class="blog-meta">
-                                <a class="author"><i class="fa-light fa-user"></i>by David Smith</a>
-                                <a><i class="fa-light fa-clock"></i>05 Jun, 2023</a>
+                                <a class="author"><i class="fa-light fa-user"></i>by Sanchay Singh</a>
+                                <a><i class="fa-light fa-clock"></i>03 May, 2024</a>
                             </div>
-                            <h4 class="box-title"><a href="https://explore.hackersvilla.xyz/blog">Educate, Empower, Excel: Discover the Power of Learning!</a>
+                            <h4 class="box-title"><a href="https://explore.hackersvilla.xyz/blog/why-hackersvilla-training-stands-out-from-the-crowd">Why HackersVilla Training Stands Out from the Crowd?
+                            </a>
                             </h4>
-                            <a href="https://explore.hackersvilla.xyz/blog" class="link-btn">Read More Details<i class="fas fa-arrow-right ms-2"></i></a>
+                            <a href="https://explore.hackersvilla.xyz/blog/why-hackersvilla-training-stands-out-from-the-crowd" class="link-btn">Read More Details<i class="fas fa-arrow-right ms-2"></i></a>
                         </div>
                     </div>
                 </div>
@@ -1319,14 +1317,14 @@ Blog Area
                 <div class="col-md-6 col-xl-4">
                     <div class="th-blog blog-single style3">
                         <div class="blog-img">
-                            <a href="https://explore.hackersvilla.xyz/blog"><img src="assets/img/blog/blog-1-1.jpg" alt="Blog Image"></a>
+                            <a href="https://explore.hackersvilla.xyz/blog"><img src="assets/img/blog/blog3.jpg" alt="Blog Image"></a>
                         </div>
                         <div class="blog-content">
                             <div class="blog-meta">
-                                <a class="author"><i class="fa-light fa-user"></i>by David Smith</a>
-                                <a><i class="fa-light fa-clock"></i>05 Jun, 2023</a>
+                                <a class="author"><i class="fa-light fa-user"></i>by Sanchay Singh</a>
+                                <a><i class="fa-light fa-clock"></i>05 May, 2024</a>
                             </div>
-                            <h4 class="box-title"><a href="https://explore.hackersvilla.xyz/blog">Educate, Empower, Excel: Discover the Power of Learning!</a>
+                            <h4 class="box-title"><a href="https://explore.hackersvilla.xyz/blog">Last 15 Days in Cybersecurity! See what happened</a>
                             </h4>
                             <a href="https://explore.hackersvilla.xyz/blog" class="link-btn">Read More Details<i class="fas fa-arrow-right ms-2"></i></a>
                         </div>
@@ -1336,14 +1334,14 @@ Blog Area
                 <div class="col-md-6 col-xl-4">
                     <div class="th-blog blog-single style3">
                         <div class="blog-img">
-                            <a href="https://explore.hackersvilla.xyz/blog"><img src="assets/img/blog/blog-1-1.jpg" alt="Blog Image"></a>
+                            <a href="https://explore.hackersvilla.xyz/blog"><img src="assets/img/blog/blog4.jpg" alt="Blog Image"></a>
                         </div>
                         <div class="blog-content">
                             <div class="blog-meta">
-                                <a class="author"><i class="fa-light fa-user"></i>by David Smith</a>
-                                <a><i class="fa-light fa-clock"></i>05 Jun, 2023</a>
+                                <a class="author"><i class="fa-light fa-user"></i>by Sanchay Singh</a>
+                                <a><i class="fa-light fa-clock"></i>05 May, 2024</a>
                             </div>
-                            <h4 class="box-title"><a href="https://explore.hackersvilla.xyz/blog">Educate, Empower, Excel: Discover the Power of Learning!</a>
+                            <h4 class="box-title"><a href="https://explore.hackersvilla.xyz/blog">How Safe is your data with Breaches all around?</a>
                             </h4>
                             <a href="https://explore.hackersvilla.xyz/blog" class="link-btn">Read More Details<i class="fas fa-arrow-right ms-2"></i></a>
                         </div>
@@ -1353,7 +1351,7 @@ Blog Area
 
             </div>
             <div class="text-center mt-5">
-                <a class="th-btn" href="https://explore.hackersvilla.xyz/blog">View All Blogs <i class="fal fa-arrow-right"></i></a>
+                <a class="th-btn" href="https://explore.hackersvilla.xyz/blog">Read All Blogs <i class="fal fa-arrow-right"></i></a>
             </div>
         </div>
     </section>
@@ -1410,7 +1408,10 @@ Contact Area
                         <span class="sub-title">Contact Us!</span>
                         <h2 class="border-title">Get in Touch</h2>
                         <p class="mt-n1 mb-30 sec-text">Fill out the form below to get in touch with our team for any enquiry or question regarding our trainings.</p>
-                        <form action="mail.php" method="POST" class="contact-form ajax-contact">
+
+                    
+
+                        <form action="https://script.google.com/macros/s/AKfycbzR6NAqEedkq__cpyr_-fP17xtyo_1WVXTMXk7AXrWWYoGDfYykBh0LKdtgdg9NI9w/exec" method="POST" class="contact-form ajax-contact">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
@@ -1428,10 +1429,9 @@ Contact Area
                                     <div class="form-group">
                                         <select name="subject" id="subject" class="single-select nice-select form-select style-white">
                                             <option value="" disabled selected hidden>Select Subject*</option>
-                                            <option value="Web Design">Web Design</option>
-                                            <option value="Web Development">Web Development</option>
-                                            <option value="Engine Diagnostics">Engine Diagnostics</option>
-                                            <option value="Digital Marketing">Digital Marketing</option>
+                                            <option value="Course Related Enquiry">Course Related Enquiry</option>
+                                            <option value="CyberSecurity Doubt">CyberSecurity Doubt</option>
+                                            <option value="General Query">General Query</option>    
                                         </select>
                                     </div>
                                 </div>
@@ -1448,7 +1448,7 @@ Contact Area
                                     </div>
                                 </div>
                                 <div class="form-btn col-12 mt-10">
-                                    <button class="th-btn">Send Message<i class="fas fa-long-arrow-right ms-2"></i></button>
+                                    <button type="submit" class="th-btn">Send Message<i class="fas fa-long-arrow-right ms-2"></i></button>
                                 </div>
                             </div>
                             <p class="form-messages mb-0 mt-3"></p>
@@ -1475,7 +1475,12 @@ Contact Area
                         <div class="row gy-40">
                             <div class="col-3">
                                 <a class="client-thumb">
-                                    <img src="assets/img/conf/7.png" alt="img">
+                                    <img src="assets/img/conf/1.png" alt="img">
+                                </a>
+                            </div>
+                            <div class="col-3">
+                                <a class="client-thumb">
+                                    <img src="assets/img/conf/2.png" alt="img">
                                 </a>
                             </div>
                             <div class="col-3">
@@ -1495,22 +1500,17 @@ Contact Area
                             </div>
                             <div class="col-3">
                                 <a class="client-thumb">
-                                    <img src="assets/img/conf/2.png" alt="img">
+                                    <img src="assets/img/conf/6.png" alt="img">
+                                </a>
+                            </div>
+                            <div class="col-3">
+                                <a class="client-thumb">
+                                    <img src="assets/img/conf/7.png" alt="img">
                                 </a>
                             </div>
                             <div class="col-3">
                                 <a class="client-thumb">
                                     <img src="assets/img/conf/8.png" alt="img">
-                                </a>
-                            </div>
-                            <div class="col-3">
-                                <a class="client-thumb">
-                                    <img src="assets/img/conf/1.png" alt="img">
-                                </a>
-                            </div>
-                            <div class="col-3">
-                                <a class="client-thumb">
-                                    <img src="assets/img/conf/6.png" alt="img">
                                 </a>
                             </div>
                         </div>
