--- a/live-batch-schedule/index.html
+++ b/live-batch-schedule/index.html
@@ -12,6 +12,7 @@
     <p class="margin-top-md margin-bottom-lg"></p>
 
     <h1 class="text-xl">HackersVilla LIVE Batch Schedule</h1>
+    <h3>06 May - 11 May</h3>
   </header>
 
   <div class="cd-schedule cd-schedule--loading margin-top-lg margin-bottom-lg js-cd-schedule">
