--- a/live-batch-schedule/b18-offline.html
+++ b/live-batch-schedule/b18-offline.html
@@ -2,9 +2,9 @@
 	<div><h3>Topics for the Week:</h3>
 		<br>
 		<ul>
-			<li>✔ Enumeration and Scanning</li>
 			<li>✔ Cryptography Basics</li>
-			<li>✔ Diffie-Hellman and ECC</li>
+			<li>✔ Diffie-Hellman, ECC, RSA and DSA</li>
+			<li>✔ AES, DES</li>
 		</ul>
 	</div>
 </div>
