--- a/live-batch-schedule/b19-online.html
+++ b/live-batch-schedule/b19-online.html
@@ -2,9 +2,9 @@
 	<div><h3>Topics for the Week:</h3>
 		<br>
 		<ul>
-			<li>✔ OSI Model and Physical Layer</li>
-			<li>✔ Data Link Layer, ARP</li>
 			<li>✔ Network Layer, DNS</li>
+			<li>✔ Subnetting and NAT</li>
+			<li>✔ Transport Layer</li>
 		</ul>
 	</div>
 </div>
