--- a/live-batch-schedule/index.html
+++ b/live-batch-schedule/index.html
@@ -200,8 +200,8 @@
         <li class="cd-schedule__group">
           <div class="cd-schedule__top-info"><span>Saturday</span></div>
   
-          <!-- <ul>
-            <li class="cd-schedule__event">
+           <ul>
+           <!-- <li class="cd-schedule__event">
               <a data-start="18:30" data-end="19:30" data-content="internship" data-event="event-1" href="#0">
                 <em class="cd-schedule__name">Internship Session</em>
               </a>
