--- a/live-batch-schedule/b18-online.html
+++ b/live-batch-schedule/b18-online.html
@@ -2,9 +2,9 @@
 	<div><h3>Topics for the Week:</h3>
 		<br>
 		<ul>
-			<li>✔ Android Hacking with Reverse Engineering</li>
-			<li>✔ Android Persistance</li>
 			<li>✔ Privilege Escalation</li>
+			<li>✔ Privilege Escalation</li>
+			<li>✔ Linux Persistance</li>
 		</ul>
 	</div>
 </div>
